...
  }
  
  var body: some View {
    VStack {
      content
      if showsDismissButton {
        Button("Dismiss") {
          dismiss()
        }
        .padding(16)
      }
    }
  }
...
