...
    stackView.translatesAutoresizingMaskIntoConstraints = false
    stackView.axis = .vertical
    stackView.spacing = 10
    effectView.contentView.addSubview(stackView)

    resetButton.setTitle("Reset", for: .normal)
    resetButton.accessibilityIdentifier = "metal-brush-reset"

    metricsStackView.axis = .horizontal
    metricsStackView.spacing = 10
    metricsStackView.alignment = .center
    metricsStackView.distribution = .fill

...
