...
                )
              }
            }
          })

          Section(content: {
            Button("PixelEditor Square") {
              let stack = EditingStack.init(
                imageProvider: .init(image: Asset.l1000316.image),
                cropModifier: .init { _, crop, completion in
                  var new = crop
                  new.updateCropExtent(toFitAspectRatio: .square)
                  completion(new)
...
                  self.image = try! stackForHorizontal.makeRenderer().render().swiftUIImage
                  self.fullScreenView = nil
                }
              }
            }

            Button("PixelEditor") {
              let stack = EditingStack.init(
                imageProvider: .init(image: Asset.l1000316.image)
              )
              fullScreenView = .init {
                PixelEditWrapper(editingStack: stack) {
                  self.image = try! stackForHorizontal.makeRenderer().render().swiftUIImage
...
