appId: app.muukii.brightroom.SwiftUIDemo
name: Crop
tags:
  - crop
---
- launchApp:
    clearState: true
- tapOn: "Crop"
- assertVisible: "Done"
- swipe:
    start: 78%, 52%
    end: 62%, 52%
    duration: 500
- tapOn: "Done"
- assertVisible: "Dismiss"
